# LogicCircuit

./: CMakeLists.txt  README.md  main.c
Analyzer/: evaluator.c  evaluator.h  lexer.c  lexer.h  parser.c  parser.h
Analyzer/Model/: node.c  node.h  operator.c  operator.h  token.c  token.h
Utility/: converter.c  converter.h  debug.c  debug.h  either.c  either.h  string_util.c  string_util.h
analyzer/: evaluator.c  evaluator.h  lexer.c  lexer.h  parser.c  parser.h
analyzer/model/: node.c  node.h  operator.c  operator.h  signal.c  signal.h  token.c  token.h
utility/: converter.c  converter.h  debug.c  debug.h  either.c  either.h  error.c  error.h  string_util.c  string_util.h
